--- a/ClashMeta.yml
+++ b/ClashMeta.yml
@@ -8,18 +8,29 @@ log-level: info
 ipv6: false
 external-controller: 0.0.0.0:9090
 proxies:
- -  {"type":"vless","name":"🇮🇷AdaVPN4️⃣","server":"ada57.cwvgq.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
- -  {"type":"vless","name":"🇮🇷AdaVPN3️⃣","server":"ada51.cwvgq.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
- -  {"type":"vless","name":"🇮🇷AdaVPN1️⃣","server":"ada2.qowch.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
- -  {"type":"vless","name":"🇮🇷AdaVPN2️⃣","server":"cdn.xlvnl.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
- -  {"type":"vless","name":"🇮🇷MetaVPN6️⃣","server":"cdn.mqupk.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
- -  {"type":"vless","name":"🇮🇷MetaVPN4️⃣","server":"sp1.tioet.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
- -  {"type":"vless","name":"🇮🇷MetaVPN5️⃣","server":"cdn.ghsid.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
- -  {"type":"vless","name":"🇮🇷MetaVPN3️⃣","server":"mt8.nabsk.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
- -  {"type":"vless","name":"🇮🇷MetaVPN2️⃣","server":"mt2.qowch.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}} 
- -  {"type":"vless","name":"🇮🇷MetaVPN1️⃣","server":"mt1.nabsk.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
- -  {"type":"vless","name":"🇮🇷MetaVPN7","server":"ada7.maioy.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
- -  {"type":"vless","name":"🇮🇷MetaVPN8","server":"cdn.mqupk.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+  - {"type":"vless","name":"🇮🇷AdaVPN4️⃣","server":"ada57.cwvgq.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+  - {"type":"vless","name":"🇮🇷AdaVPN3️⃣","server":"ada51.cwvgq.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+  - {"type":"vless","name":"🇮🇷AdaVPN1️⃣","server":"ada2.qowch.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+  - {"type":"vless","name":"🇮🇷AdaVPN2️⃣","server":"cdn.xlvnl.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+  - {"type":"vless","name":"🇮🇷MetaVPN6️⃣","server":"cdn.mqupk.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+  - {"type":"vless","name":"🇮🇷MetaVPN4️⃣","server":"sp1.tioet.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+  - {"type":"vless","name":"🇮🇷MetaVPN5️⃣","server":"cdn.ghsid.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+  - {"type":"vless","name":"🇮🇷MetaVPN3️⃣","server":"mt8.nabsk.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+  - {"type":"vless","name":"🇮🇷MetaVPN2️⃣","server":"mt2.qowch.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}} 
+  - {"type":"vless","name":"🇮🇷MetaVPN1️⃣","server":"mt1.nabsk.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+  - {"type":"vless","name":"🇮🇷MetaVPN7","server":"ada7.maioy.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+  - {"type":"vless","name":"🇮🇷MetaVPN8","server":"cdn.mqupk.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+
+  - {"type":"vless","name":"AdaVPN","server":"ada3.qowch.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+  - {"type":"vless","name":"AdaVPN 2","server":"cdn.mqupk.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+  - {"type":"vless","name":"AdaVPN 3","server":"ada57.cwvgq.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+  - {"type":"vless","name":"MetaVPN","server":"mt7.nabsk.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+
+  - {"type":"vless","name":"🇨🇦+Canada+CDN+1","server":"cdnjs.com","port":443,"uuid":"fa2441c0-6f63-458b-977b-16abb27a7c67","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"cdnca1.digisport.shop","ws-opts":{"path":"/16882","headers":{"host":"cdnca1.digisport.shop"}}}
+  - {"type":"vless","name":"🇨🇦+Canada+CDN+2","server":"cdnjs.com","port":443,"uuid":"5e5a6afb-f8e8-420a-d20f-d41f3d7eeb70","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"cdnca2.digisport.shop","ws-opts":{"path":"/19901","headers":{"host":"cdnca2.digisport.shop"}}}
+  - {"type":"vless","name":"🇹🇷+Turkey+CDN+1","server":"cdnjs.com","port":443,"uuid":"4884033c-5e97-4276-b849-0eed9238e516","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"cdntr1.digisport.shop","ws-opts":{"path":"/15364","headers":{"host":"cdntr1.digisport.shop"}}}
+  - {"type":"vless","name":"🇹🇷+Turkey+CDN+2","server":"cdnjs.com","port":443,"uuid":"761977d0-fdec-4511-a11f-d82234222a6f","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"cdntr2.digisport.shop","ws-opts":{"path":"/13863","headers":{"host":"cdntr2.digisport.shop"}}}
+
 proxy-groups:  
   - name: 🔰 All Proxies
     type: select
@@ -38,6 +49,14 @@ proxy-groups:
          -  🇮🇷MetaVPN1️⃣
          -  🇮🇷MetaVPN7
          -  🇮🇷MetaVPN8
+         -  AdaVPN
+         -  AdaVPN 2
+         -  AdaVPN 3
+         -  MetaVPN
+         -  🇨🇦+Canada+CDN+1
+         -  🇨🇦+Canada+CDN+2
+         -  🇹🇷+Turkey+CDN+1
+         -  🇹🇷+Turkey+CDN+2
 
   - name: 🔥 Auto(Best ping)
     type: url-test
@@ -56,6 +75,15 @@ proxy-groups:
          -  🇮🇷MetaVPN1️⃣
          -  🇮🇷MetaVPN7
          -  🇮🇷MetaVPN8
+         -  AdaVPN
+         -  AdaVPN 2
+         -  AdaVPN 3
+         -  MetaVPN
+         -  🇨🇦+Canada+CDN+1
+         -  🇨🇦+Canada+CDN+2
+         -  🇹🇷+Turkey+CDN+1
+         -  🇹🇷+Turkey+CDN+2
+
 rule-providers:
   reject:
     type: http
