--- a/ClashMeta.yml
+++ b/ClashMeta.yml
@@ -1,35 +1,48 @@
-port: 7890
-socks-port: 7891
-redir-port: 7892
-mixed-port: 7893
-allow-lan: false
+mixed-port: 7890
+allow-lan: true
+tcp-concurrent: true
+enable-process: true
+find-process-mode: always
+global-client-fingerprint: chrome
+geodata-mode: true
+geox-url:
+  geoip: "https://cdn.jsdelivr.net/gh/Loyalsoldier/v2ray-rules-dat@release/geoip.dat"
+  geosite: "https://cdn.jsdelivr.net/gh/Loyalsoldier/v2ray-rules-dat@release/geosite.dat"
+  mmdb: "https://cdn.jsdelivr.net/gh/Loyalsoldier/geoip@release/Country.mmdb"
 mode: rule
-log-level: info
-ipv6: false
-external-controller: 0.0.0.0:9090
+log-level: error ## silent/error/warning/info/debug
+ipv6: true
+external-controller: 127.0.0.1:9090
+profile:
+  store-selected: false ## It's better to default to "auto" every time it restarts.
+  store-fake-ip: true
 proxies:
-  - {"type":"vless","name":"🇮🇷AdaVPN4️⃣","server":"ada57.cwvgq.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
-  - {"type":"vless","name":"🇮🇷AdaVPN3️⃣","server":"ada51.cwvgq.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
-  - {"type":"vless","name":"🇮🇷AdaVPN1️⃣","server":"ada2.qowch.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
-  - {"type":"vless","name":"🇮🇷AdaVPN2️⃣","server":"cdn.xlvnl.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
-  - {"type":"vless","name":"🇮🇷MetaVPN6️⃣","server":"cdn.mqupk.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
-  - {"type":"vless","name":"🇮🇷MetaVPN4️⃣","server":"sp1.tioet.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
-  - {"type":"vless","name":"🇮🇷MetaVPN5️⃣","server":"cdn.ghsid.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
-  - {"type":"vless","name":"🇮🇷MetaVPN3️⃣","server":"mt8.nabsk.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
-  - {"type":"vless","name":"🇮🇷MetaVPN2️⃣","server":"mt2.qowch.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}} 
-  - {"type":"vless","name":"🇮🇷MetaVPN1️⃣","server":"mt1.nabsk.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
-  - {"type":"vless","name":"🇮🇷MetaVPN7","server":"ada7.maioy.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
-  - {"type":"vless","name":"🇮🇷MetaVPN8","server":"cdn.mqupk.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+  - {"type":"vless","name":"🇮🇷AdaVPN4️⃣","server":"ada57.cwvgq.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"client-fingerprint":chrome,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+  - {"type":"vless","name":"🇮🇷AdaVPN3️⃣","server":"ada51.cwvgq.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"client-fingerprint":chrome,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+  - {"type":"vless","name":"🇮🇷AdaVPN1️⃣","server":"ada2.qowch.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"client-fingerprint":chrome,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+  - {"type":"vless","name":"🇮🇷AdaVPN2️⃣","server":"cdn.xlvnl.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"client-fingerprint":chrome,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+  - {"type":"vless","name":"🇮🇷MetaVPN6️⃣","server":"cdn.mqupk.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"client-fingerprint":chrome,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+  - {"type":"vless","name":"🇮🇷MetaVPN4️⃣","server":"sp1.tioet.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"client-fingerprint":chrome,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+  - {"type":"vless","name":"🇮🇷MetaVPN5️⃣","server":"cdn.ghsid.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"client-fingerprint":chrome,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+  - {"type":"vless","name":"🇮🇷MetaVPN3️⃣","server":"mt8.nabsk.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"client-fingerprint":chrome,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+  - {"type":"vless","name":"🇮🇷MetaVPN2️⃣","server":"mt2.qowch.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"client-fingerprint":chrome,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}} 
+  - {"type":"vless","name":"🇮🇷MetaVPN1️⃣","server":"mt1.nabsk.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"client-fingerprint":chrome,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+  - {"type":"vless","name":"🇮🇷MetaVPN7","server":"ada7.maioy.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"client-fingerprint":chrome,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+  - {"type":"vless","name":"🇮🇷MetaVPN8","server":"cdn.mqupk.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"client-fingerprint":chrome,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
 
-  - {"type":"vless","name":"AdaVPN","server":"ada3.qowch.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
-  - {"type":"vless","name":"AdaVPN 2","server":"cdn.mqupk.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
-  - {"type":"vless","name":"AdaVPN 3","server":"ada57.cwvgq.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
-  - {"type":"vless","name":"MetaVPN","server":"mt7.nabsk.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+  - {"type":"vless","name":"AdaVPN","server":"ada3.qowch.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"client-fingerprint":chrome,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+  - {"type":"vless","name":"AdaVPN 2","server":"cdn.mqupk.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"client-fingerprint":chrome,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+  - {"type":"vless","name":"AdaVPN 3","server":"ada57.cwvgq.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"client-fingerprint":chrome,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
+  - {"type":"vless","name":"MetaVPN","server":"mt7.nabsk.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"client-fingerprint":chrome,"network":"ws","servername":"bmi.ir","ws-opts":{"path":"users?ed=2048","headers":{"host":"bmi.ir"}}}
 
-  - {"type":"vless","name":"🇨🇦+Canada+CDN+1","server":"cdnjs.com","port":443,"uuid":"fa2441c0-6f63-458b-977b-16abb27a7c67","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"cdnca1.digisport.shop","ws-opts":{"path":"/16882","headers":{"host":"cdnca1.digisport.shop"}}}
-  - {"type":"vless","name":"🇨🇦+Canada+CDN+2","server":"cdnjs.com","port":443,"uuid":"5e5a6afb-f8e8-420a-d20f-d41f3d7eeb70","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"cdnca2.digisport.shop","ws-opts":{"path":"/19901","headers":{"host":"cdnca2.digisport.shop"}}}
-  - {"type":"vless","name":"🇹🇷+Turkey+CDN+1","server":"cdnjs.com","port":443,"uuid":"4884033c-5e97-4276-b849-0eed9238e516","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"cdntr1.digisport.shop","ws-opts":{"path":"/15364","headers":{"host":"cdntr1.digisport.shop"}}}
-  - {"type":"vless","name":"🇹🇷+Turkey+CDN+2","server":"cdnjs.com","port":443,"uuid":"761977d0-fdec-4511-a11f-d82234222a6f","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","servername":"cdntr2.digisport.shop","ws-opts":{"path":"/13863","headers":{"host":"cdntr2.digisport.shop"}}}
+  - {"type":"vless","name":"🇨🇦+Canada+CDN+1","server":"cdnjs.com","port":443,"uuid":"fa2441c0-6f63-458b-977b-16abb27a7c67","skip-cert-verify":true,"udp":true,"tls":true,"client-fingerprint":chrome,"network":"ws","servername":"cdnca1.digisport.shop","ws-opts":{"path":"/16882","headers":{"host":"cdnca1.digisport.shop"}}}
+  - {"type":"vless","name":"🇨🇦+Canada+CDN+2","server":"cdnjs.com","port":443,"uuid":"5e5a6afb-f8e8-420a-d20f-d41f3d7eeb70","skip-cert-verify":true,"udp":true,"tls":true,"client-fingerprint":chrome,"network":"ws","servername":"cdnca2.digisport.shop","ws-opts":{"path":"/19901","headers":{"host":"cdnca2.digisport.shop"}}}
+  - {"type":"vless","name":"🇹🇷+Turkey+CDN+1","server":"cdnjs.com","port":443,"uuid":"4884033c-5e97-4276-b849-0eed9238e516","skip-cert-verify":true,"udp":true,"tls":true,"client-fingerprint":chrome,"network":"ws","servername":"cdntr1.digisport.shop","ws-opts":{"path":"/15364","headers":{"host":"cdntr1.digisport.shop"}}}
+  - {"type":"vless","name":"🇹🇷+Turkey+CDN+2","server":"cdnjs.com","port":443,"uuid":"761977d0-fdec-4511-a11f-d82234222a6f","skip-cert-verify":true,"udp":true,"tls":true,"client-fingerprint":chrome,"network":"ws","servername":"cdntr2.digisport.shop","ws-opts":{"path":"/13863","headers":{"host":"cdntr2.digisport.shop"}}}
+  - {"name":"adavpn_1","type":"vless","server":"ada21.npbjn.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","client-fingerprint":chrome,"ws-opts":{"path":"users?ed=2048"}}
+  - {"name":"adavpn_2","type":"vless","server":"ada108.oshtd.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","client-fingerprint":chrome,"ws-opts":{"path":"users?ed=2048"}}
+  - {"name":"metavpn_1","type":"vless","server":"mt1.nabsk.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","client-fingerprint":chrome,"ws-opts":{"path":"users?ed=2048"}}
+  - {"name":"metavpn_2","type":"vless","server":"mt11.nabsk.com","port":443,"uuid":"a61eb3a2-1adb-48cb-ab46-ce225769de16","skip-cert-verify":true,"udp":true,"tls":true,"network":"ws","client-fingerprint":chrome,"ws-opts":{"path":"users?ed=2048"}}
 
 proxy-groups:  
   - name: 🔰 All Proxies
@@ -48,15 +61,19 @@ proxy-groups:
          -  🇮🇷MetaVPN2️⃣
          -  🇮🇷MetaVPN1️⃣
          -  🇮🇷MetaVPN7
-         -  🇮🇷MetaVPN8
-         -  AdaVPN
-         -  AdaVPN 2
-         -  AdaVPN 3
-         -  MetaVPN
-         -  🇨🇦+Canada+CDN+1
-         -  🇨🇦+Canada+CDN+2
-         -  🇹🇷+Turkey+CDN+1
-         -  🇹🇷+Turkey+CDN+2
+         - 🇮🇷MetaVPN8
+         - AdaVPN
+         - AdaVPN 2
+         - AdaVPN 3
+         - MetaVPN
+         - 🇨🇦+Canada+CDN+1
+         - 🇨🇦+Canada+CDN+2
+         - 🇹🇷+Turkey+CDN+1
+         - 🇹🇷+Turkey+CDN+2
+         - adavpn_1
+         - adavpn_2
+         - metavpn_1
+         - metavpn_2
 
   - name: 🔥 Auto(Best ping)
     type: url-test
@@ -74,15 +91,19 @@ proxy-groups:
          -  🇮🇷MetaVPN2️⃣
          -  🇮🇷MetaVPN1️⃣
          -  🇮🇷MetaVPN7
-         -  🇮🇷MetaVPN8
-         -  AdaVPN
-         -  AdaVPN 2
-         -  AdaVPN 3
-         -  MetaVPN
-         -  🇨🇦+Canada+CDN+1
-         -  🇨🇦+Canada+CDN+2
-         -  🇹🇷+Turkey+CDN+1
-         -  🇹🇷+Turkey+CDN+2
+         - 🇮🇷MetaVPN8
+         - AdaVPN
+         - AdaVPN 2
+         - AdaVPN 3
+         - MetaVPN
+         - 🇨🇦+Canada+CDN+1
+         - 🇨🇦+Canada+CDN+2
+         - 🇹🇷+Turkey+CDN+1
+         - 🇹🇷+Turkey+CDN+2
+         - adavpn_1
+         - adavpn_2
+         - metavpn_1
+         - metavpn_2
 
 rule-providers:
   reject:
@@ -103,6 +124,26 @@ rule-providers:
     url: https://github.com/SamadiPour/iran-hosted-domains/releases/latest/download/clash_rules.yaml
     path: ./ruleset/iran.yaml
     interval: 432000
+  ADs:
+    type: http
+    behavior: classical
+    url: https://github.com/farrokhi/adblock-iran/raw/master/filter.txt #https://github.com/farrokhi/adblock-iran/raw/master/pihole.txt
+    path: ./ruleset/filter.txt
+    interval: 432000
+  ADs2:
+    type: http
+    behavior: classical
+    url: https://github.com/farrokhi/adblock-iran/raw/master/pihole.txt
+    path: ./ruleset/pihole.txt
+    interval: 432000
+  Trackers:
+    type: http
+    behavior: classical
+    url: https://github.com/farrokhi/adblock-iran/raw/master/additional-trackers.txt
+    path: ./ruleset/additional-trackers.txt
+    interval: 432000
+
+
 rules:
   - IP-CIDR,192.168.0.0/16,DIRECT,no-resolve
   - IP-CIDR,10.0.0.0/8,DIRECT,no-resolve
@@ -114,11 +155,20 @@ rules:
   - IP-CIDR6,fe80::/10,DIRECT,no-resolve
   - IP-CIDR6,fd00::/8,DIRECT,no-resolve
   - DOMAIN-SUFFIX,local,DIRECT
-  - DOMAIN-SUFFIX,ir,DIRECT
+  - DOMAIN-SUFFIX,.ir,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
   - DOMAIN,yacd.haishan.me,DIRECT
+  - DOMAIN,yacd.metacubex.one,DIRECT ## Yet Another Clash Dashbord for Clash.Meta
+  - DOMAIN,clash.metacubex.one,DIRECT ## Razord
+  - GEOSITE,category-ads-all,REJECT ## Rejects advertisements.
+  - GEOSITE,win-spy,REJECT ## Rejects MS Windows analytics and spying.
+  - GEOIP,private,DIRECT,no-resolve ## Loopback and LAN IPs
+  - GEOIP,IR,DIRECT
+  - GEOSITE,category-ir,DIRECT
   - RULE-SET,applications,DIRECT
   - RULE-SET,reject,REJECT
+  - RULE-SET,ADs,REJECT
+  - RULE-SET,ADs2,REJECT
+  - RULE-SET,Trackers,REJECT
   - RULE-SET,iran,DIRECT
-  - GEOIP,IR,DIRECT
   - MATCH ,🔰 All Proxies,🔥 Auto(Best ping)
